@@ -1,19 +1,25 @@
 package pl.edu.agh.hiputs.service.worker;
 
+import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toList;
+
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.Callable;
+import java.util.concurrent.Future;
+import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import javax.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.SerializationUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.stereotype.Service;
 import pl.edu.agh.hiputs.communication.Subscriber;
 import pl.edu.agh.hiputs.communication.model.MessagesTypeEnum;
@@ -22,13 +28,18 @@ import pl.edu.agh.hiputs.communication.model.messages.Message;
 import pl.edu.agh.hiputs.communication.model.serializable.SerializedLane;
 import pl.edu.agh.hiputs.communication.service.worker.MessageSenderService;
 import pl.edu.agh.hiputs.communication.service.worker.WorkerSubscriptionService;
+import pl.edu.agh.hiputs.model.id.LaneId;
 import pl.edu.agh.hiputs.model.id.MapFragmentId;
 import pl.edu.agh.hiputs.model.id.PatchId;
 import pl.edu.agh.hiputs.model.map.mapfragment.TransferDataHandler;
 import pl.edu.agh.hiputs.model.map.patch.Patch;
+import pl.edu.agh.hiputs.model.map.roadstructure.LaneReadable;
 import pl.edu.agh.hiputs.scheduler.TaskExecutorService;
+import pl.edu.agh.hiputs.scheduler.task.LaneSerializationTask;
 import pl.edu.agh.hiputs.scheduler.task.SynchronizeShadowPatchState;
 import pl.edu.agh.hiputs.service.worker.usecase.CarsOnBorderSynchronizationService;
+import pl.edu.agh.hiputs.statistics.SimulationPoint;
+import pl.edu.agh.hiputs.statistics.worker.IterationStatisticsService;
 import pl.edu.agh.hiputs.utils.DebugUtils;
 
 @Slf4j
@@ -37,14 +48,13 @@ import pl.edu.agh.hiputs.utils.DebugUtils;
 public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynchronizationService, Subscriber {
 
   private final WorkerSubscriptionService subscriptionService;
-
   private final TaskExecutorService taskExecutorService;
-
   private final MessageSenderService messageSenderService;
-  private final List<BorderSynchronizationMessage> incomingMessages = Collections.synchronizedList(new LinkedList<>());
-  private final List<BorderSynchronizationMessage> futureIncomingMessages = Collections.synchronizedList(new LinkedList<>());
+  private final BlockingQueue<BorderSynchronizationMessage> incomingMessages = new LinkedBlockingQueue<>();
+  private final BlockingQueue<BorderSynchronizationMessage> futureIncomingMessages = new LinkedBlockingQueue<>();
 
-  private AtomicInteger simulationStepNo = new AtomicInteger(0);
+  private final IterationStatisticsService iterationStatisticsService;
+  private final AtomicInteger simulationStepNo = new AtomicInteger(0);
 
   @PostConstruct
   void init() {
@@ -52,64 +62,92 @@ public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynch
   }
 
   @Override
-  public void sendCarsOnBorderToNeighbours(TransferDataHandler mapFragment) {
-    log.info("Step 9-0-1");
-    Set<Patch> distinctBorderPatches = mapFragment.getBorderPatches()
-        .values()
-        .stream()
+  public List<Pair<String, Integer>> sendCarsOnBorderToNeighbours(TransferDataHandler mapFragment) {
+    log.debug("Step 9-0-1");
+    iterationStatisticsService.startStage(SimulationPoint.PATCHES_SERIALIZATION);
+    Set<Patch> distinctBorderPatches =
+        mapFragment.getBorderPatches().values().stream().flatMap(Collection::stream).collect(Collectors.toSet());
+
+    List<Callable<?>> serializedBorderPatchesTasks = distinctBorderPatches.stream()
+        .map(patch -> patch.streamLanesEditable().map(LaneSerializationTask::new).collect(Collectors.toList()))
         .flatMap(Collection::stream)
-        .collect(Collectors.toSet());
-    log.info("Step 9-0-2");
-    Map<PatchId, List<byte[]>> serializedBorderPatches = distinctBorderPatches
-        .parallelStream()
-        .map(p -> new ImmutablePair<PatchId, List<byte[]>>(p.getPatchId(),
-            p.parallelStreamLanesEditable().map(SerializedLane::new)
-            .map(SerializationUtils::serialize)
-            .toList()))
-        .collect(Collectors.toMap(ImmutablePair::getLeft, ImmutablePair::getRight));
-    log.info("Step 9-0-3");
+        .collect(Collectors.toList());
+
+    // log.info("Step 9-0-3");
+    List<Pair<LaneId, SerializedLane>> serializedBorderLanes =
+        (List<Pair<LaneId, SerializedLane>>) taskExecutorService.executeCallableBatch(serializedBorderPatchesTasks);
+
+    Map<PatchId, List<SerializedLane>> serializedBorderPatches = serializedBorderLanes.stream()
+        .collect(Collectors.groupingBy(pair -> mapFragment.getPatchIdByLaneId(pair.getLeft()),
+            mapping(Pair::getRight, toList())));
+
     Map<MapFragmentId, BorderSynchronizationMessage> messages = mapFragment.getBorderPatches()
-        .entrySet()
-        .parallelStream()
+        .entrySet().stream()
         .map(entry -> new ImmutablePair<>(entry.getKey(), createMessageFrom(entry.getValue(), serializedBorderPatches)))
         .collect(Collectors.toMap(ImmutablePair::getLeft, ImmutablePair::getRight));
-    log.info("Step 9-0-4");
-    long start = System.currentTimeMillis();
+
+    List<Pair<String, Integer>> sendCars = distinctBorderPatches.stream().map(patch -> {
+      Integer cars = patch.streamLanesReadable().map(LaneReadable::numberOfCars).reduce(0, Integer::sum);
+      return new ImmutablePair<>(patch.getPatchId().getValue(), cars);
+    }).collect(Collectors.toList());
+
+    log.debug("Step 9-0-2");
+    iterationStatisticsService.endStage(SimulationPoint.PATCHES_SERIALIZATION);
+    iterationStatisticsService.startStage(
+        SimulationPoint.PATCHES_SENDING); // TODO There is also serialization in patches sending - change name
+
     sendMessages(messages);
-    log.info("Step 9-0-4 time = {}", System.currentTimeMillis() - start);
+    iterationStatisticsService.endStage(SimulationPoint.PATCHES_SENDING);
+
+    return sendCars;
+  }
+
+  private void sendMessages(Map<MapFragmentId, BorderSynchronizationMessage> messages) {
+    messages.entrySet().stream().parallel().forEach(entry -> {
+      try {
+        messageSenderService.send(entry.getKey(), entry.getValue());
+      } catch (IOException e) {
+        log.error("Error sending message BorderSynchronizationMessage to: {}", entry.getKey(), e);
+      }
+    });
+  }
+
+  private BorderSynchronizationMessage createMessageFrom(Set<Patch> patches,
+      Map<PatchId, List<SerializedLane>> serializedBorderPatches) {
+
+    Map<String, List<SerializedLane>> patchContent = patches.stream()
+        .collect(Collectors.toMap(e -> e.getPatchId().getValue(), e -> serializedBorderPatches.get(e.getPatchId())));
+    return new BorderSynchronizationMessage(simulationStepNo.get(), patchContent);
   }
 
   @Override
-  public synchronized void synchronizedGetRemoteCars(TransferDataHandler mapFragment) {
+  public void synchronizedGetRemoteCars(TransferDataHandler mapFragment) {
     int countOfNeighbours = mapFragment.getNeighbors().size();
-    int readedMessage = 0;
+    List<Future<?>> patchSynchronizationFutures = new LinkedList<>();
+    int consumedMessages = 0;
 
-    while (incomingMessages.size() < countOfNeighbours && readedMessage < countOfNeighbours) {
+    while (consumedMessages < countOfNeighbours) {
       try {
-        this.wait();
-        readedMessage += applyMessages(mapFragment, readedMessage);
+        BorderSynchronizationMessage msg = incomingMessages.take();
+
+        List<Runnable> tasks = msg.getPatchContent()
+            .entrySet()
+            .stream()
+            .map(e -> new SynchronizeShadowPatchState(e.getKey(), e.getValue(), mapFragment))
+            .collect(Collectors.toList());
+
+        patchSynchronizationFutures.addAll(taskExecutorService.executeBatchReturnFutures(tasks));
+        consumedMessages += 1;
       } catch (InterruptedException e) {
-        log.error(e.getMessage());
+        log.error("Exception when waiting for cars: ", e);
         throw new RuntimeException(e);
       }
     }
+    taskExecutorService.waitForAllTaskFinished(patchSynchronizationFutures);
 
     incomingMessages.clear();
-    incomingMessages.addAll(futureIncomingMessages);
+    futureIncomingMessages.drainTo(incomingMessages);
     simulationStepNo.incrementAndGet();
-    futureIncomingMessages.clear();
-  }
-
-  private int applyMessages(TransferDataHandler mapFragment, int readedMessage) {
-    List<Runnable> synchronizeShadowPatchesStateTasks = incomingMessages.subList(readedMessage, incomingMessages.size())
-        .parallelStream()
-        .flatMap(message -> message.getPatchContent().entrySet().parallelStream())
-        .map(e -> new SynchronizeShadowPatchState(e.getKey(), e.getValue(), mapFragment))
-        .collect(Collectors.toList());
-
-    taskExecutorService.executeBatch(synchronizeShadowPatchesStateTasks);
-
-    return synchronizeShadowPatchesStateTasks.size();
   }
 
   private String getWeaitingByMessage() {
@@ -119,14 +157,18 @@ public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynch
           .map(patchId -> DebugUtils.getMapFragment().getMapFragmentIdByPatchId(new PatchId(patchId)))
           .collect(Collectors.toSet());
 
-      return DebugUtils.getMapFragment().getNeighbors()
+      return DebugUtils.getMapFragment()
+          .getNeighbors()
           .stream()
           .filter(mapFragmentId -> !mapFragmentIds.contains(mapFragmentId))
-          .map(mapFragmentId -> mapFragmentId.getId() + "{ " + DebugUtils.getMapFragment().getBorderPatches().get(mapFragmentId).stream().map(p -> p.getPatchId().getValue()).collect(
-              Collectors.joining(", ")) + "}")
+          .map(mapFragmentId -> mapFragmentId.getId() + "{ " + DebugUtils.getMapFragment()
+              .getBorderPatches()
+              .get(mapFragmentId)
+              .stream()
+              .map(p -> p.getPatchId().getValue())
+              .collect(Collectors.joining(", ")) + "}")
           .collect(Collectors.joining(", "));
-    } catch (Exception e){
-
+    } catch (Exception e) {
     }
     return "---";
   }
@@ -137,38 +179,16 @@ public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynch
       if (message.getMessageType() != MessagesTypeEnum.BorderSynchronizationMessage) {
         return;
       }
-
       BorderSynchronizationMessage borderSynchronizationMessage = (BorderSynchronizationMessage) message;
-      // log.info("---Receive--- my it {} it {} from {}", simulationStepNo.get(), borderSynchronizationMessage.getSimulationStepNo(), borderSynchronizationMessage.getPatchContent().keySet().iterator().next());
+      // log.info("---Receive--- my it {} it {} from {}", simulationStepNo.get(), borderSynchronizationMessage
+      // .getSimulationStepNo(), borderSynchronizationMessage.getPatchContent().keySet().iterator().next());
       if (borderSynchronizationMessage.getSimulationStepNo() == simulationStepNo.get()) {
         incomingMessages.add(borderSynchronizationMessage);
       } else {
         futureIncomingMessages.add(borderSynchronizationMessage);
       }
-
-      notifyAll();
     } catch (Exception e) {
       log.error("Unexpected Exception : ", e);
     }
   }
-
-  private void sendMessages(Map<MapFragmentId, BorderSynchronizationMessage> messages) {
-    messages.forEach((mapFragmentId, message) -> {
-      try {
-        messageSenderService.send(mapFragmentId, message);
-      } catch (IOException e) {
-        log.error("Error sending message BorderSynchronizationMessage to: " + mapFragmentId, e);
-      }
-    });
-  }
-
-  private BorderSynchronizationMessage createMessageFrom(Set<Patch> patches,
-      Map<PatchId, List<byte[]>> serializedBorderPatches) {
-    Map<String, List<byte[]>> patchContent = patches
-        .parallelStream()
-        .collect(Collectors.toMap(e -> e.getPatchId().getValue(),
-            e -> serializedBorderPatches.get(e.getPatchId())));
-    return new BorderSynchronizationMessage(simulationStepNo.get(), patchContent);
-  }
-
 }
