@@ -5,6 +5,9 @@ import static pl.edu.agh.hiputs.communication.model.MessagesTypeEnum.CompletedIn
 import static pl.edu.agh.hiputs.communication.model.MessagesTypeEnum.FinishSimulationMessage;
 import static pl.edu.agh.hiputs.communication.model.MessagesTypeEnum.FinishSimulationStatisticMessage;
 import static pl.edu.agh.hiputs.communication.model.MessagesTypeEnum.WorkerConnectionMessage;
+import static pl.edu.agh.hiputs.visualization.connection.topic.TopicConfiguration.VISUALIZATION_STATE_CHANGE_TOPIC;
+import static proto.model.RUNNING_STATE.CLOSED;
+import static proto.model.RUNNING_STATE.STARTED;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -22,19 +25,20 @@ import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.ExitCodeGenerator;
 import org.springframework.boot.SpringApplication;
 import org.springframework.context.ApplicationContext;
+import org.springframework.kafka.config.KafkaListenerEndpointRegistry;
 import org.springframework.stereotype.Service;
 import pl.edu.agh.hiputs.communication.model.messages.MapReadyToReadMessage;
-import pl.edu.agh.hiputs.communication.model.messages.ServerInitializationMessage;
 import pl.edu.agh.hiputs.communication.model.messages.RunSimulationMessage;
+import pl.edu.agh.hiputs.communication.model.messages.ServerInitializationMessage;
 import pl.edu.agh.hiputs.communication.model.messages.ShutDownMessage;
 import pl.edu.agh.hiputs.communication.model.serializable.ConnectionDto;
 import pl.edu.agh.hiputs.communication.model.serializable.WorkerDataDto;
 import pl.edu.agh.hiputs.communication.service.server.ConnectionInitializationService;
 import pl.edu.agh.hiputs.communication.service.server.MessageSenderServerService;
 import pl.edu.agh.hiputs.communication.service.server.WorkerRepository;
+import pl.edu.agh.hiputs.configuration.Configuration;
 import pl.edu.agh.hiputs.loadbalancer.utils.GraphCoherencyUtil;
 import pl.edu.agh.hiputs.partition.model.PatchConnectionData;
 import pl.edu.agh.hiputs.partition.model.PatchData;
@@ -44,10 +48,11 @@ import pl.edu.agh.hiputs.partition.persistance.PatchesGraphReader;
 import pl.edu.agh.hiputs.partition.persistance.PatchesGraphWriter;
 import pl.edu.agh.hiputs.partition.service.MapFragmentPartitioner;
 import pl.edu.agh.hiputs.partition.service.MapStructureLoader;
-import pl.edu.agh.hiputs.service.ConfigurationService;
-import pl.edu.agh.hiputs.service.server.StatisticSummaryService;
 import pl.edu.agh.hiputs.service.server.WorkerSynchronisationService;
 import pl.edu.agh.hiputs.service.worker.usecase.MapRepositoryServerHandler;
+import pl.edu.agh.hiputs.statistics.SimulationPoint;
+import pl.edu.agh.hiputs.statistics.server.StatisticSummaryService;
+import pl.edu.agh.hiputs.visualization.connection.VisualizationSynchronisationService;
 
 @Slf4j
 @Service
@@ -56,7 +61,7 @@ public class ServerStrategyService implements Strategy {
 
   private final WorkerSynchronisationService workerSynchronisationService;
   private final ConnectionInitializationService connectionInitializationService;
-  private final ConfigurationService configurationService;
+  private final Configuration configuration;
   private final WorkerStrategyService workerStrategyService;
   private final MapFragmentPartitioner mapFragmentPartitioner;
   private final ExecutorService workerPrepareExecutor = newSingleThreadExecutor();
@@ -66,44 +71,61 @@ public class ServerStrategyService implements Strategy {
 
   private final MapRepositoryServerHandler mapRepository;
   private final PatchesGraphReader patchesGraphReader;
-
   private final PatchesGraphWriter patchesGraphWriter;
-
   private final WorkerRepository workerRepository;
 
+  private final VisualizationSynchronisationService visualizationSynchronisationService;
+
+  private final KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry;
   private final GraphCoherencyUtil graphCoherencyUtil;
+  @Autowired
+  private ApplicationContext context;
 
   @Override
   public void executeStrategy() throws InterruptedException {
-
     log.info("Running server");
+    statisticSummaryService.startStage(SimulationPoint.SERVER_APP);
+    statisticSummaryService.startStage(SimulationPoint.SERVER_INITIALIZATION);
     connectionInitializationService.init();
     workerPrepareExecutor.submit(new PrepareWorkerTask());
 
-    Path mapPackagePath = configurationService.getConfiguration().isReadFromOsmDirectly()
-        ? generateDeploymentPackageName(Path.of(configurationService.getConfiguration().getMapPath()))
-        : Path.of(configurationService.getConfiguration().getMapPath());
-
-    Graph<PatchData, PatchConnectionData> patchesGraph = configurationService.getConfiguration().isReadFromOsmDirectly()
-        ? createAndSavePatchesPackage(mapPackagePath)
-        : patchesGraphReader.readGraphWithPatches(mapPackagePath);
-
-    mapRepository.setPatchesGraph(patchesGraph);
-
     log.info("Start waiting for all workers be in state WorkerConnection");
     workerSynchronisationService.waitForAllWorkers(WorkerConnectionMessage);
+    log.info("All workers are in state WorkerConnection");
 
-
-    if (configurationService.getConfiguration().isReadFromOsmDirectly()) {
-      messageSenderServerService.broadcast(MapReadyToReadMessage.builder().mapPackagePath(mapPackagePath.toString()).build());
+    if (configuration.isEnableVisualization()) {
+      kafkaListenerEndpointRegistry.getListenerContainer(VISUALIZATION_STATE_CHANGE_TOPIC).start();
+      visualizationSynchronisationService.waitForVisualizationStateChangeMessage(STARTED);
     }
 
-    Collection<Graph<PatchData, PatchConnectionData>> mapFragmentsContents = mapFragmentPartitioner.partition(patchesGraph);
+    statisticSummaryService.startStage(SimulationPoint.SERVER_INIT_MAP);
+    Path mapPackagePath =
+        configuration.isReadFromOsmDirectly() ? generateDeploymentPackageName(Path.of(configuration.getMapPath()))
+            : Path.of(configuration.getMapPath());
+
+    Graph<PatchData, PatchConnectionData> patchesGraph =
+        configuration.isReadFromOsmDirectly() ? createAndSavePatchesPackage(mapPackagePath)
+            : patchesGraphReader.readGraphWithPatches(mapPackagePath);
+
+    mapRepository.setPatchesGraph(patchesGraph);
+    statisticSummaryService.endStage(SimulationPoint.SERVER_INIT_MAP);
+
+    statisticSummaryService.startStage(SimulationPoint.SERVER_MAP_PARTITION);
+    if (configuration.isReadFromOsmDirectly()) {
+      messageSenderServerService.broadcast(
+          MapReadyToReadMessage.builder().mapPackagePath(mapPackagePath.toString()).build());
+    }
+
+    Collection<Graph<PatchData, PatchConnectionData>> mapFragmentsContents =
+        mapFragmentPartitioner.partition(patchesGraph);
 
     calculateAndDistributeConfiguration(mapFragmentsContents);
+    statisticSummaryService.endStage(SimulationPoint.SERVER_MAP_PARTITION);
 
     log.info("Waiting for all workers be in state CompletedInitialization");
     workerSynchronisationService.waitForAllWorkers(CompletedInitializationMessage);
+
+    statisticSummaryService.endStage(SimulationPoint.SERVER_INITIALIZATION);
 
     // if(!graphCoherencyUtil.validateEndModel()){
     //   log.error("the graph is not consistent");
@@ -111,37 +133,51 @@ public class ServerStrategyService implements Strategy {
     //   Thread.sleep(1000);
     //   shutDown();
     // }
-
+    statisticSummaryService.startStage(SimulationPoint.SERVER_SIMULATION);
     distributeRunSimulationMessage(mapFragmentsContents);
+
+    if (configuration.isEnableVisualization()) {
+      visualizationSynchronisationService.changeSimulationState(STARTED);
+    }
 
     log.info("Waiting for end simulation");
     workerSynchronisationService.waitForAllWorkers(FinishSimulationMessage);
     log.info("Simulation finished");
 
-    if (configurationService.getConfiguration().isStatisticModeActive()) {
+    statisticSummaryService.endStage(SimulationPoint.SERVER_SIMULATION);
+
+    if (configuration.isEnableVisualization()) {
+      visualizationSynchronisationService.changeSimulationState(CLOSED);
+    }
+
+    if (configuration.isStatisticModeActive()) {
       workerSynchronisationService.waitForAllWorkers(FinishSimulationStatisticMessage);
       log.info("Start generating summary");
+      statisticSummaryService.endStage(SimulationPoint.SERVER_APP);
+
       generateReport();
     }
 
     messageSenderServerService.broadcast(new ShutDownMessage());
-    Thread.sleep(1000);
+    Thread.sleep(500);
     shutDown();
   }
 
-  private void calculateAndDistributeConfiguration(Collection<Graph<PatchData, PatchConnectionData>> mapFragmentsContents) {
+  private void calculateAndDistributeConfiguration(
+      Collection<Graph<PatchData, PatchConnectionData>> mapFragmentsContents) {
     Iterator<String> workerIdsIterator = workerRepository.getAllWorkersIds().iterator();
     Iterator<Graph<PatchData, PatchConnectionData>> mapFragmentContentIterator = mapFragmentsContents.iterator();
 
     Map<String, String> patchId2workerId = new HashMap<>();
     // map which patch belongs where
-    while(workerIdsIterator.hasNext() && mapFragmentContentIterator.hasNext()) {
+    while (workerIdsIterator.hasNext() && mapFragmentContentIterator.hasNext()) {
       String workerId = workerIdsIterator.next();
       Graph<PatchData, PatchConnectionData> mapFragmentContent = mapFragmentContentIterator.next();
 
-      patchId2workerId.putAll(
-          mapFragmentContent.getNodes().keySet().stream().collect(Collectors.toMap(Function.identity(), e -> workerId))
-      );
+      patchId2workerId.putAll(mapFragmentContent.getNodes()
+          .keySet()
+          .stream()
+          .collect(Collectors.toMap(Function.identity(), e -> workerId)));
     }
 
     workerIdsIterator = workerRepository.getAllWorkersIds().iterator();
@@ -149,15 +185,17 @@ public class ServerStrategyService implements Strategy {
 
     //prepare serverInitMessage for each worker
     Map<String, ServerInitializationMessage> workerId2ServerInitializationMessage = new HashMap<>();
-    boolean bigWorkerSelected = false;
+    boolean bigWorkerSelected = configuration.getNumberOfCarsInBigWorker() > 0;
 
-    while(workerIdsIterator.hasNext() && mapFragmentContentIterator.hasNext()) {
+    while (workerIdsIterator.hasNext() && mapFragmentContentIterator.hasNext()) {
       String workerId = workerIdsIterator.next();
       Graph<PatchData, PatchConnectionData> mapFragmentContent = mapFragmentContentIterator.next();
 
       //calculate shadow patches
-      Set<String> shadowPatchesIds = mapFragmentContent.getNodes().values()
-          .stream().flatMap(n -> Stream.concat(n.getIncomingEdges().stream(), n.getOutgoingEdges().stream()))
+      Set<String> shadowPatchesIds = mapFragmentContent.getNodes()
+          .values()
+          .stream()
+          .flatMap(n -> Stream.concat(n.getIncomingEdges().stream(), n.getOutgoingEdges().stream()))
           .distinct()
           .flatMap(e -> Stream.of(e.getSource(), e.getTarget()))
           .map(Node::getId)
@@ -168,12 +206,12 @@ public class ServerStrategyService implements Strategy {
       Map<String, List<String>> workerId2shadowPatchesIds = new HashMap<>();
       shadowPatchesIds.forEach(patchId -> {
         String neighbourWorkerId = patchId2workerId.get(patchId);
-          if (workerId2shadowPatchesIds.containsKey(neighbourWorkerId)) {
-            workerId2shadowPatchesIds.get(neighbourWorkerId).add(patchId);
-          } else {
-            workerId2shadowPatchesIds.put(neighbourWorkerId, Stream.of(patchId).collect(Collectors.toList()));
-          }
-        });
+        if (workerId2shadowPatchesIds.containsKey(neighbourWorkerId)) {
+          workerId2shadowPatchesIds.get(neighbourWorkerId).add(patchId);
+        } else {
+          workerId2shadowPatchesIds.put(neighbourWorkerId, Stream.of(patchId).collect(Collectors.toList()));
+        }
+      });
 
       List<WorkerDataDto> workerDataDtos = workerId2shadowPatchesIds.entrySet()
           .stream()
@@ -181,24 +219,21 @@ public class ServerStrategyService implements Strategy {
               .id(e.getKey())
               .address(workerRepository.get(e.getKey()).getAddress())
               .port(workerRepository.get(e.getKey()).getPort())
-              .build()))
-          .toList();
+              .build())).collect(Collectors.toList());
 
       ServerInitializationMessage serverInitializationMessage = ServerInitializationMessage.builder()
           .patchIds(mapFragmentContent.getNodes().keySet().stream().toList())
-          .workerInfo(workerDataDtos)
-          .bigWorker(!bigWorkerSelected)
+          .workerInfo(workerDataDtos).bigWorker(bigWorkerSelected)
           .build();
 
-      if(!bigWorkerSelected){
-        bigWorkerSelected = true;
+      if (bigWorkerSelected) {
+        bigWorkerSelected = false;
       }
       workerId2ServerInitializationMessage.put(workerId, serverInitializationMessage);
     }
 
-    workerId2ServerInitializationMessage.entrySet().forEach(
-        e -> messageSenderServerService.send(e.getKey(), e.getValue())
-    );
+    workerId2ServerInitializationMessage.entrySet()
+        .forEach(e -> messageSenderServerService.send(e.getKey(), e.getValue()));
   }
 
   private void generateReport() {
@@ -212,9 +247,9 @@ public class ServerStrategyService implements Strategy {
   private Graph<PatchData, PatchConnectionData> createAndSavePatchesPackage(Path mapPackagePath) {
     log.info("Start reading map");
     Graph<PatchData, PatchConnectionData> patchesGraph;
-    if (configurationService.getConfiguration().isReadFromOsmDirectly()) {
+    if (configuration.isReadFromOsmDirectly()) {
       log.info("Reading map from osm file");
-      patchesGraph = mapStructureLoader.loadFromOsmFile(Path.of(configurationService.getConfiguration().getMapPath()));
+      patchesGraph = mapStructureLoader.loadFromOsmFile(Path.of(configuration.getMapPath()));
 
       log.info("Writing map with patches");
       createDeploymentPackageDir(mapPackagePath);
@@ -223,16 +258,11 @@ public class ServerStrategyService implements Strategy {
     } else {
       //read existing map
       log.info("Reading map from import package - patch partition skipped");
-      patchesGraph = mapStructureLoader.loadFromCsvImportPackage(Path.of(configurationService.getConfiguration().getMapPath()));
+      patchesGraph = mapStructureLoader.loadFromCsvImportPackage(Path.of(configuration.getMapPath()));
     }
 
     log.info("Reading map finished successfully");
     return patchesGraph;
-  }
-
-  private Path generateDeploymentPackageName(Path osmFilePath) {
-    String fileName = osmFilePath.getFileName().toString().split("\\.")[0];
-    return Paths.get(osmFilePath.getParent().toAbsolutePath().toString(), fileName + "_" + UUID.randomUUID());
   }
 
   private void createDeploymentPackageDir(Path deploymentPackagePath) {
@@ -241,11 +271,14 @@ public class ServerStrategyService implements Strategy {
     }
   }
 
-  @Autowired
-  private ApplicationContext context;
   private void shutDown() {
-    int exitCode = SpringApplication.exit(context, (ExitCodeGenerator) () -> 0);
+    int exitCode = SpringApplication.exit(context, () -> 0);
     System.exit(exitCode);
+  }
+
+  private Path generateDeploymentPackageName(Path osmFilePath) {
+    String fileName = osmFilePath.getFileName().toString().split("\\.")[0];
+    return Paths.get(osmFilePath.getParent().toAbsolutePath().toString(), fileName + "_" + UUID.randomUUID());
   }
 
   private class PrepareWorkerTask implements Runnable {
@@ -253,7 +286,7 @@ public class ServerStrategyService implements Strategy {
     @Override
     public void run() {
       try {
-        Thread.sleep(1000);
+        Thread.sleep(50);
         workerStrategyService.executeStrategy();
       } catch (InterruptedException e) {
         log.error("Worker not started", e);
